ingress_kube_prom_stack.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-prometheus-stack
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-operated  # Change this to your Prometheus service name
                port:
                  number: 9090
#          - path: /grafana
#            pathType: Prefix
#            backend:
#              service:
#                name: grafana-service  # Change this to your Grafana service name
#                port:
#                  number: 3000
#          - path: /alertmanager
#            pathType: Prefix
#            backend:
#              service:
#                name: alertmanager-service  # Change this to your Alertmanager service name
#                port:
#                  number: 9093
